<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settings.SettingsFragment">

        <LinearLayout
            android:id="@+id/screen_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="96dp"
                    android:src="@drawable/aneta_wallet_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/main_text"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version"
                    android:textColor="@color/text"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/screen_header"
            app:layout_constraintWidth_max="@dimen/horizontal_max_width">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/settings_card_color">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.App.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/half_horizontal_margin"
                        android:autoLink="web"
                        android:gravity="center"
                        android:text="@string/social_media_title" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/telegram"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:clickable="true"
                            android:contentDescription="@string/telegram_button_content_description"
                            android:src="@drawable/telegram"
                            app:layout_constraintEnd_toEndOf="@id/linearLayout"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:ignore="MissingConstraints" />

                        <LinearLayout
                            android:id="@+id/linearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:ignore="MissingConstraints"
                            android:orientation="horizontal" />


                        <ImageView
                            android:id="@+id/discord"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:clickable="true"
                            android:contentDescription="@string/dicsord_button_content_description"
                            android:src="@drawable/discord"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/linearLayout"
                            tools:ignore="MissingConstraints" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/settings_card_color"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_coingecko"
                        style="@style/TextAppearance.App.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/half_horizontal_margin"
                        android:height="48dp"
                        android:gravity="center"
                        android:text="@string/desc_coingecko" />

                    <Button
                        android:id="@+id/display_currency"
                        android:backgroundTint="@color/spinner_background"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                        tools:text="@string/button_display_currency" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/settings_card_color"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.App.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/half_horizontal_margin"
                        android:autoLink="web"
                        android:gravity="center"
                        android:text="@string/desc_dark_mode" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/dark_mode_system"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                        android:text="@string/button_dark_mode_system" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/dark_mode_day"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/half_horizontal_margin"
                            android:layout_weight="1"
                            android:text="@string/button_dark_mode_day" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/dark_mode_night"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/half_horizontal_margin"
                            android:layout_weight="1"
                            android:text="@string/button_dark_mode_night" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_nft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/settings_card_color"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.App.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/desc_download_content" />

                    <Button
                        android:id="@+id/button_download_content"
                        style="@style/Widget.App.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                        android:text="@string/button_download_content_on" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/settings_card_color"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.App.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/half_horizontal_margin"
                        android:gravity="center"
                        android:text="@string/desc_expert_settings" />

                    <Button
                        android:id="@+id/button_connection_settings"
                        style="@style/Widget.App.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                        android:text="@string/button_connection_settings" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_debug_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/settings_card_color"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:visibility="gone">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_debug_information"
                        style="@style/Widget.App.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/activity_vertical_margin"
                        android:text="@string/button_show_debug_info" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>