<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_gradient"
    tools:context=".wallet.RestoreWalletFragmentDialog">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_restore_wallet"
                style="@style/TextAppearance.App.HeadlineCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/half_horizontal_margin"
                android:text="@string/label_restore_wallet"
                app:drawableStartCompat="@drawable/ic_restore"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_restore_wallet"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextAppearance.App.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/half_horizontal_margin"
                android:text="@string/intro_restore_wallet" />


<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/tv_mnemonic"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:errorEnabled="true"-->
<!--                app:errorIconDrawable="@null">-->

<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:gravity="top"-->
<!--                    android:imeOptions="actionDone"-->
<!--                    android:inputType="textMultiLine|textVisiblePassword"-->
<!--                    android:lines="8" />-->

<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mnemonic_input_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/mnemonic_layout"/>
            <Button
                android:id="@+id/button_restore"
                style="?attr/materialButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:elegantTextHeight="true"
                android:text="@string/button_restore" />

        </LinearLayout>
</androidx.core.widget.NestedScrollView>